# CppLearningDemos

./: CMakeLists.txt  demos.cpp  forwarder.cpp  index.html  main.cpp  servers.cpp
src/: ROOT_CERITICATES.h  RequestHandler.h  SimpleHttpClient.cpp  SimpleHttpClient.h  SimpleHttpClient2.cpp  SimpleHttpClient2.h  SimpleHttpServer.cpp  SimpleHttpServer.h  SimpleHttpsClient.cpp  SimpleHttpsClient.h  SimpleHttpsServer.cpp  SimpleHttpsServer.h  SomeTools.cpp  SomeTools.h  TestClazzSize.cpp  TestClazzSize.h  TestFileTemplate.cpp  TestFileTemplate.h
